--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,4 +6,160 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    font-family: 'Poppins', sans-serif;
 }
+
+#card_background {
+    background-color: #ffff;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    height: fit-content;
+}
+
+#inner_card {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#border_gradient {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    background: linear-gradient(180deg, #2563eb, #0e2c6d);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+}
+
+#foto_profil {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    padding: 0; 
+}
+
+#area_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+
+}
+
+#name_card {
+    font-size: 20px;
+    font-weight: 600;
+    color: #020617;
+    margin: 0;
+}
+
+#nim_card {
+    font-size: 16px;
+    font-weight: 400;
+    color: #0f172a;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+#job_card {
+    font-size: 12px;
+    text-align: center;
+    font-weight: 500;
+    color: #0f172a;
+    margin: 0;
+    /* Font to Upper */
+    text-transform: uppercase;
+}
+
+#socmed_group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.link_button {
+    text-decoration: none;
+
+}
+
+.socmed_button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    font-size: 30px;
+}
+
+
+/* Individual colors dari tiap sosmed */
+.facebook {
+    background-color: #3b5998;
+    color: #ffff;
+
+}
+
+.twitter {
+    background-color: #1da1f2;
+    color: #ffff;
+}
+
+.instagram {
+    background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+    color: #ffff;
+}
+
+.youtube {
+    background-color: #ff0000;
+    color: #ffff;
+}
+
+
+.button_group {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.rounded_button {
+    margin: 20px 0;
+    padding: 10px 30px;
+    border-radius: 20px;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    color: #ffff;
+    background-color: #2563eb;
+    cursor: pointer;
+}
+
+#interaction_group_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.interact_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    color: #334155;
+}
+
+
+
